<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="E_GasType" Id="{16d4fde9-cdfe-4602-b227-dae293ff5ea7}">
    <Declaration><![CDATA[TYPE E_GasType :
(
	none := 0,
	Neon,
	Argon,
	Krypton,
	Xenon
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>